--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,30 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer: ^3.0.0
   build_runner: ^2.4.14
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
-    - assets/icons/
+    - assets/icon/
+    - assets/splash/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_round: true
+  remove_alpha_ios: true
+  min_sdk_android: 21
+ 
